macdir-simple (3.3) unstable; urgency=medium

  * Add in group search scripts.
  * Remove pam_groups support.
  * Remove samba computer support.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 27 Jan 2016 18:01:49 -0800

macdir-simple (3.2) unstable; urgency=medium

  * Retire all binds to the directory that use the ldap manager password.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sun, 09 Aug 2015 13:51:10 -0700

macdir-simple (3.1) unstable; urgency=medium

  * Correct function call when changing the password.
  * Add ldap-test to make it easy to test basic kerberos connections
    to the ldap server.
    
 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 08 Aug 2015 16:55:48 -0700

macdir-simple (3.0) unstable; urgency=medium

  * Rename package to prevent confusion with macdir work that has
    GSS-API support.
  * Allow for multiple values for mailDelivery.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 27 May 2015 00:12:14 -0700

macdir (2.7) unstable; urgency=low

  * WebAuth bug fixes.
  * Add and delete kerberos principals.
  * Add setting of kerberos passwords.

 -- Bill MacAllister <mac@spowl.ca-zephyr.org>  Thu, 13 Feb 2014 00:10:07 -0800

macdir (2.6) unstable; urgency=low

  * Register global bug fixes.

 -- Bill MacAllister <mac@spowl.ca-zephyr.org>  Thu, 02 Jan 2014 10:21:26 -0800

macdir (2.5) unstable; urgency=low

  * Cleanup menu so that the search selection appears.
  * Allow the selection of additional search criteria.

 -- Bill MacAllister <mac@spowl.ca-zephyr.org>  Thu, 02 Jan 2014 03:10:03 -0800

macdir (2.4) unstable; urgency=low

  * Bug fixes for more register globals dependencies.

 -- Bill MacAllister <mac@ca-zephyr.org>  Thu, 02 Jan 2014 02:57:11 -0800

macdir (2.3) unstable; urgency=low

  * Use full file names in URLs.
  * Remove dependency on register_globals.
  * Remove obsolete session function references.

 -- Bill MacAllister <mac@ca-zephyr.org>  Tue, 31 Dec 2013 12:25:09 -0800

macdir (2.2) unstable; urgency=low
