@@ -6,7 +6,7 @@ header("Content-Type: text/html; charset=UTF-8");
  <title><?php print $title;?></title>
  <link rel="stylesheet" href="/macdir-styles/macdir-common.css">
  <link rel="stylesheet" media="(max-width: 640px)"
-    href="/macdir-styles/macdir-table-small.css">
+    href="/macdir-styles/macdir-table-link.css">
  <link rel="stylesheet" media="(min-width: 640px)"
     href="/macdir-styles/macdir-table.css">
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,3 +20,4 @@ header("Content-Type: text/html; charset=UTF-8");
  </div>
 
  <div id="main">
+
