@@ -1,0 +1,47 @@
+# Table controls for small screens on the my_links display
+
+/* Force table to not be like tables anymore */
+table, thead, tbody, th, td, tr { 
+	display: block; 
+}
+	
+/* Hide table headers (but not display: none;, for accessibility) */
+thead tr { 
+	position: absolute;
+	top: -9999px;
+	left: -9999px;
+}
+	
+tr { border: 1px solid #ccc; }
+	
+td { 
+	/* Behave  like a "row" */
+	border: none;
+	border-bottom: 1px solid #eee; 
+	position: relative;
+	padding-left: 50%; 
+}
+	
+td:before { 
+	/* Now like a table header */
+	position: absolute;
+	/* Top/left values mimic padding */
+	top: 6px;
+	left: 6px;
+	width: 45%; 
+	padding-right: 10px; 
+	white-space: nowrap;
+}
+/*
+	Label the data
+*/
+td:nth-of-type(1):before { content: "Column-1"; }
+td:nth-of-type(2):before { content: "Column-2"; }
+td:nth-of-type(3):before { content: "Column-3"; }
+td:nth-of-type(4):before { content: "Column-4"; }
+td:nth-of-type(5):before { content: "Column-5"; }
+td:nth-of-type(6):before { content: "Column-6"; }
+td:nth-of-type(7):before { content: "Column-7"; }
+td:nth-of-type(8):before { content: "Column-8"; }
+td:nth-of-type(9):before { content: "Column-9"; }
+}
